--- a/style.css
+++ b/style.css
@@ -2,11 +2,6 @@
     color: black;
 }
 
-body {
-    background-color: #f0f0f0;
-    margin: 3vw;
-}
-
 p {
     font-size: calc(12px + 0.6vw);
 }
@@ -36,11 +31,11 @@ h2 {
 }
 
 .blue {
-    color: #33b6e2;
+    color: #2692f7;
 }
 
 .dark-blue {
-    color: #0685b0;
+    color: #0060bb;
 }
 
 .amount {
@@ -158,7 +153,7 @@ button {
     border: none;
     border-radius: 10px;
     background-position: center;
-    box-shadow: 0 0 10px #808080f0;
+    /* box-shadow: 0 0 10px #808080f0; */
     transition: 0.2s;
 }
 
@@ -169,7 +164,7 @@ button:hover {
 
 button:disabled {
     background-color: gray;
-    box-shadow: none;
+    /* box-shadow: none; */
 }
 
 span.ripple {
@@ -185,4 +180,15 @@ span.ripple {
         transform: scale(4);
         opacity: 0;
     }
+}
+
+.newsticker-bg {
+    background-color: black;
+    margin: 0;
+}
+
+.newsticker-bg p {
+    color: white;
+    margin: 0;
+    padding: calc(6px + 0.3vw) 0;
 }
