--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     color: black;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 p {
     font-size: calc(12px + 0.6vw);
 }
@@ -109,7 +113,7 @@ h2 {
     padding: 5px 5px 5px 7px;
     margin: 0.4em 0;
     border-radius: 10px;
-    background-color: #ddd;
+    background-color: #e0e0e0;
 }
 
 .upgrade-button {
@@ -136,8 +140,20 @@ h2 {
     width: 30%;
 }
 
+.width-20 {
+    width: 20%;
+}
+
 .width-30 {
     width: 30%;
+}
+
+.width-35 {
+    width: 35%;
+}
+
+.width-40 {
+    width: 40%;
 }
 
 sup {
@@ -184,11 +200,16 @@ span.ripple {
 
 .newsticker-bg {
     background-color: black;
+    height: calc(24px + 1.2vw);
     margin: 0;
 }
 
-.newsticker-bg p {
+.newsticker-bg * {
+    display: inline-block;
+    position: absolute;
+    top: calc(4px + 0.2vw);
+    white-space: nowrap;
     color: white;
     margin: 0;
-    padding: calc(6px + 0.3vw) 0;
+    width: auto;
 }
