--- a/style.css
+++ b/style.css
@@ -44,12 +44,12 @@ h2 {
 
 .amount {
     margin: .5em;
-    line-height: 0;
+    line-height: 1px;
 }
 
 .amount-div {
     display: flex;
-    height: calc(48px + 4.8vw);
+    height: calc(48px + 2.4vw);
     justify-content: space-between;
     flex-direction: column;
 }
@@ -62,6 +62,18 @@ h2 {
 .amount-div h1 {
     position: relative;
     bottom: -0.05vw;
+}
+
+.fixed {
+    z-index: 100;
+    top: 0;
+    margin: 0;
+    width: 100%;
+    position: fixed;
+    background-color: white;
+    box-shadow: 0 0 10px #808080f0;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .marginless {
@@ -140,21 +152,15 @@ h2 {
     width: 30%;
 }
 
-.width-20 {
-    width: 20%;
-}
-
-.width-30 {
-    width: 30%;
-}
-
-.width-35 {
-    width: 35%;
-}
-
-.width-40 {
-    width: 40%;
-}
+.width-15 { width: 15%; }
+.width-20 { width: 20%; }
+.width-25 { width: 25%; }
+.width-30 { width: 30%; }
+.width-35 { width: 35%; }
+.width-40 { width: 40%; }
+.width-45 { width: 45%; }
+.width-50 { width: 50%; }
+.width-55 { width: 55%; }
 
 sup {
     line-height: 0;
@@ -179,7 +185,7 @@ button:hover {
 }
 
 button:disabled {
-    background-color: gray;
+    background-color: #888;
     /* box-shadow: none; */
 }
 
@@ -189,6 +195,30 @@ span.ripple {
     transform: scale(0);
     animation: ripple 600ms linear;
     background-color: rgba(255, 255, 255, 0.7);
+}
+
+.prestige-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #e0e0e0;
+    padding: 5px;
+    margin: 0.4em 0;
+    width: 45%;
+    height: calc(100px + 5vw);
+    border-radius: 10px;
+}
+
+.prestige-div button {
+    margin: 0;
+}
+
+.prestige-div p {
+    text-align: center;
+}
+
+.prestige-rate {
+    margin-bottom: 0.5em;
 }
 
 @keyframes ripple {
@@ -212,4 +242,30 @@ span.ripple {
     color: white;
     margin: 0;
     width: auto;
+}
+
+.away {
+    margin: 0.4em 0;
+    padding: 10px;
+    background-color: #e0e0e0;
+    border-radius: 10px;
+}
+
+.away h3 {
+    margin: 0;
+}
+
+.away p {
+    line-height: 0.5em;
+    padding-left: 20px;
+}
+
+.button {
+    margin: auto;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2.4em;
+    width: 100%;
 }
