--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@ body {
     justify-content: center;
 }
 
+/* what does this do?
 main {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
 }
+*/
 
 p {
     font-size: calc(12px + 0.3vw);
@@ -55,7 +57,6 @@ h2 {
     margin: 0;
 }
 
-
 .amount-div h1 {
     position: relative;
     bottom: -0.05vw;
@@ -71,6 +72,15 @@ h2 {
     box-shadow: 0 0 10px #808080f0;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+}
+
+.main {
+    background-color: white;
+    transition: 0.3s;
+    /*
+    filter: blur(5px) brightness(55%);
+    pointer-events: none;
+    */
 }
 
 .marginless {
@@ -250,6 +260,12 @@ span.ripple {
 }
 
 .away {
+    position: fixed;
+    z-index: 50;
+    top: 50%;
+    left: 50%;
+    width: 75%;
+    transform: translate(-50%, -50%);
     margin: 0.4em 0;
     padding: 10px;
     background-color: #eaeaea;
