--- a/style.css
+++ b/style.css
@@ -16,20 +16,23 @@ main {
 */
 
 p {
-    font-size: calc(12px + 0.3vw);
+    font-size: calc(12px + .2vh);
 }
 
 h1 {
-    font-size: calc(18px + 0.3vw);
+    font-size: calc(18px + .2vh);
 }
 
 h2 {
-    font-size: calc(15px + 0.3vw);
+    font-size: calc(15px + .2vh);
 }
 
+.test { color: #90959b; }
+
 .white { color: white; }
-.black { color: black; }
 .gray { color: #555; }
+.light-gray { color: #ecf0f1; }
+.black { color: black; }
 .pink { color: #de2ac6; }
 
 .blue { color: #2692f7; }
@@ -48,7 +51,7 @@ h2 {
 
 .amount-div {
     display: flex;
-    height: calc(60px + .3vw);
+    height: calc(60px + .2vh);
     justify-content: space-between;
     flex-direction: column;
 }
@@ -125,14 +128,14 @@ h2 {
 }
 
 .upgrades {
-    height: calc(24px + .6vw);
+    height: calc(24px + .4vh);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 5px 5px 5px 7px;
     margin: 0.4em 0;
     border-radius: 10px;
-    background-color: #eaeaea;
+    background-color: #e5e7e8;
 }
 
 .upgrade-button {
@@ -143,9 +146,9 @@ h2 {
 }
 
 .upgrade-rate {
-    font-size: calc(10px + .3vw);
+    font-size: calc(10px + .2vh);
     color: #555;
-    margin-top: calc(-12px - .3vw);
+    margin-top: calc(-12px - .2vh);
     margin-bottom: 0;
 }
 
@@ -159,6 +162,7 @@ h2 {
     width: 30%;
 }
 
+/* super verbose boilerplate */
 .width-15 { width: 15%; }
 .width-20 { width: 20%; }
 .width-25 { width: 25%; }
@@ -177,11 +181,11 @@ sup {
 }
 
 button {
-    font-size: calc(10px + .3vw);
+    font-size: calc(10px + .2vh);
     position: relative;
     overflow: hidden;
     color: white;
-    background-color: black;
+    background-color: #24282c;
     border: none;
     border-radius: 10px;
     background-position: center;
@@ -189,9 +193,10 @@ button {
     transition: 0.2s;
 }
 
-button:hover {
+button:hover:enabled {
+    /* border: 2px solid #6e727b; */
     color: white;
-    background-color: black;
+    background-color: #24282c;
 }
 
 button:disabled {
@@ -211,10 +216,10 @@ span.ripple {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #eaeaea;
+    background-color: #e5e7e8;
     padding: 5px;
     width: 45%;
-    height: calc(120px + .6vw);
+    height: calc(120px + .4vh);
     border-radius: 10px;
 }
 
@@ -241,21 +246,35 @@ span.ripple {
 
 .newsticker-bg {
     background-color: black;
-    height: calc(24px + .3vw);
+    height: calc(24px + .2vh);
     max-width: 720px;
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
 }
 
-.newsticker-bg * {
+.newsticker-bg p {
     display: inline-block;
-    position: absolute;
+    /* position: absolute; */
     top: 4px;
     white-space: nowrap;
     color: white;
     margin: 0;
     width: auto;
+}
+
+/* clean this */
+.newsticker-bg sup {
+    display: inline-block;
+    top: 4px;
+    white-space: nowrap;
+    color: white;
+    margin: 0;
+    width: auto;
+    vertical-align: baseline;
+    position: relative;
+    top: -0.5em;
+    line-height: 0;
 }
 
 .away {
@@ -264,10 +283,11 @@ span.ripple {
     top: 50%;
     left: 50%;
     width: 75%;
+    max-width: 360px;
     transform: translate(-50%, -50%);
     margin: 0.4em 0;
     padding: 10px;
-    background-color: #eaeaea;
+    background-color: #e5e7e8;
     border-radius: 10px;
 }
 
