--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ h2 {
     font-size: calc(15px + 0.3vw);
 }
 
+h3 {
+    font-size: calc(13px + .2vh);
+}
+
+.test { color: #90959b; }
+
 .white { color: white; }
 .black { color: black; }
 .gray { color: #555; }
@@ -34,6 +40,9 @@ h2 {
 
 .blue { color: #2692f7; }
 .dark-blue { color: #0060bb; }
+
+.purple { color: #9865ff;}
+.dark-purple { color: #6537c2;}
 
 .light-red { color: #ecb2b2; }
 .red { color: #e85050; }
@@ -77,13 +86,19 @@ h2 {
 .main {
     background-color: white;
     transition: 0.3s;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     /*
     filter: blur(5px) brightness(55%);
     pointer-events: none;
     */
 }
 
-.marginless {
+.m0 {
     margin: 0;
 }
 
@@ -170,6 +185,17 @@ h2 {
 .width-55 { width: 55%; }
 
 sup {
+    /*
+    vertical-align: baseline;
+    position: relative;
+    top: -0.5em;
+    line-height: 0;
+    */
+    display: inline-block;
+    top: 4px;
+    white-space: nowrap;
+    margin: 0;
+    width: auto;
     vertical-align: baseline;
     position: relative;
     top: -0.5em;
@@ -213,8 +239,8 @@ span.ripple {
     justify-content: space-between;
     background-color: #eaeaea;
     padding: 5px;
-    width: 45%;
-    height: calc(120px + .6vw);
+    width: 100%;
+    height: calc(120px + .4vh);
     border-radius: 10px;
 }
 
@@ -241,8 +267,8 @@ span.ripple {
 
 .newsticker-bg {
     background-color: black;
-    height: calc(24px + .3vw);
-    max-width: 720px;
+    height: calc(24px + .2vh);
+    /* max-width: 390px; */
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
@@ -264,6 +290,7 @@ span.ripple {
     top: 50%;
     left: 50%;
     width: 75%;
+    max-width: 320px;
     transform: translate(-50%, -50%);
     margin: 0.4em 0;
     padding: 10px;
@@ -293,7 +320,7 @@ span.ripple {
 
 .toggle {
     height: 2.4em;
-    width: 4.8em;
+    width: 3.6em;
     background-color: #ecb2b2;
 }
 
