--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body {
     display: flex;
     justify-content: center;
+    touch-action: manipulation;
 }
 
 /* what does this do?
@@ -104,6 +105,7 @@ h3 {
 
 .center {
     text-align: center;
+    justify-content: center;
 }
 
 .button-center {
@@ -118,7 +120,6 @@ h3 {
 .inline {
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 .space-between {
@@ -139,7 +140,7 @@ h3 {
     justify-content: flex-start;
 }
 
-.upgrades {
+.tab {
     height: calc(24px + .6vw);
     display: flex;
     align-items: center;
@@ -150,14 +151,25 @@ h3 {
     background-color: #eaeaea;
 }
 
-.upgrade-button {
+.tab-big {
+    height: calc(42px + .6vw);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 5px 5px 7px;
+    margin: 0.4em 0;
+    border-radius: 10px;
+    background-color: #eaeaea;
+}
+
+.tab-button {
     height: 100%;
     /* width: calc(60px + 3vw); */
     width: 30%;
     bottom: 0;
 }
 
-.upgrade-rate {
+.tab-text {
     font-size: calc(10px + .3vw);
     color: #555;
     margin-top: calc(-12px - .3vw);
@@ -185,12 +197,6 @@ h3 {
 .width-55 { width: 55%; }
 
 sup {
-    /*
-    vertical-align: baseline;
-    position: relative;
-    top: -0.5em;
-    line-height: 0;
-    */
     display: inline-block;
     top: 4px;
     white-space: nowrap;
@@ -211,13 +217,7 @@ button {
     border: none;
     border-radius: 10px;
     background-position: center;
-    /* box-shadow: 0 0 10px #808080f0; */
     transition: 0.2s;
-}
-
-button:hover {
-    color: white;
-    background-color: black;
 }
 
 button:disabled {
@@ -230,7 +230,7 @@ span.ripple {
     border-radius: 50%;
     transform: scale(0);
     animation: ripple 600ms linear;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .prestige-div {
@@ -335,4 +335,15 @@ span.ripple {
     height: 100%;
     border-radius: 10px;
     background-color: #2692f7;
+}
+
+@keyframes highlight {
+    50% {
+        border: 2px solid black;
+        box-shadow: inset 0 0 0 2px yellow;
+    }
+    100% {
+        border: 2px solid transparent;
+        box-shadow: none;
+    }
 }
