--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+/* Elements */
+
 * {
     color: black;
+}
+
+html {
+    touch-action: manipulation;
 }
 
 body {
@@ -8,31 +14,28 @@ body {
     touch-action: manipulation;
 }
 
-/* what does this do?
-main {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-}
-*/
-
 p {
-    font-size: calc(12px + 0.3vw);
+    font-size: 13px;
 }
 
 h1 {
-    font-size: calc(18px + 0.3vw);
+    font-size: 18px;
 }
 
 h2 {
-    font-size: calc(15px + 0.3vw);
+    font-size: 16px;
 }
 
 h3 {
-    font-size: calc(13px + .2vh);
+    font-size: 14px;
 }
 
-.test { color: #90959b; }
+hr {
+    border: 0;
+    border-top: 2px solid #c4c5c7;
+}
+
+/* Colors */
 
 .white { color: white; }
 .black { color: black; }
@@ -45,32 +48,16 @@ h3 {
 .purple { color: #9865ff;}
 .dark-purple { color: #6537c2;}
 
+.pink { color: #d165ff;}
+.dark-pink { color: #9837c2;}
+
 .light-red { color: #ecb2b2; }
 .red { color: #e85050; }
 
 .light-green { color: #99b897; }
 .green { color: #4eb346; }
 
-.amount {
-    margin: .5em;
-    line-height: 1px;
-}
-
-.amount-div {
-    display: flex;
-    height: calc(60px + .3vw);
-    justify-content: space-between;
-    flex-direction: column;
-}
-
-.amount-div p {
-    margin: 0;
-}
-
-.amount-div h1 {
-    position: relative;
-    bottom: -0.05vw;
-}
+/* Amount */
 
 .fixed {
     z-index: 100;
@@ -79,24 +66,42 @@ h3 {
     width: 100%;
     position: fixed;
     background-color: white;
-    box-shadow: 0 0 10px #808080f0;
+    box-shadow: rgba(24, 28, 47, 0.2) 0px 4px 12px 0px;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
 }
+
+.amount {
+    margin: .5em;
+    line-height: 1px;
+}
+
+.amount-div {
+    display: flex;
+    height: 24px;
+    justify-content: center;
+}
+
+.amount-div p {
+    margin: 0;
+}
+
+.amount-div h1 {
+    position: relative;
+    bottom: 0.15em;
+}
+
+/* Main */
 
 .main {
     background-color: white;
     transition: 0.3s;
     width: 100%;
     height: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    /*
-    filter: blur(5px) brightness(55%);
-    pointer-events: none;
-    */
 }
 
 .m0 {
@@ -106,15 +111,6 @@ h3 {
 .center {
     text-align: center;
     justify-content: center;
-}
-
-.button-center {
-    margin: auto;
-    display: block;
-}
-
-.vertical-center {
-    vertical-align: center;
 }
 
 .inline {
@@ -141,38 +137,26 @@ h3 {
 }
 
 .tab {
-    height: calc(24px + .6vw);
+    height: 28px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5px 5px 5px 7px;
+    padding: 5px 7px 5px 7px;
     margin: 0.4em 0;
     border-radius: 10px;
-    background-color: #eaeaea;
-}
-
-.tab-big {
-    height: calc(42px + .6vw);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5px 5px 5px 7px;
-    margin: 0.4em 0;
-    border-radius: 10px;
-    background-color: #eaeaea;
+    background-color: rgb(229, 230, 232);
 }
 
 .tab-button {
     height: 100%;
-    /* width: calc(60px + 3vw); */
     width: 30%;
     bottom: 0;
 }
 
 .tab-text {
-    font-size: calc(10px + .3vw);
+    font-size: 11px;
     color: #555;
-    margin-top: calc(-12px - .3vw);
+    margin-top: -13px;
     margin-bottom: 0;
 }
 
@@ -196,22 +180,33 @@ h3 {
 .width-50 { width: 50%; }
 .width-55 { width: 55%; }
 
+.height-2x {
+    line-height: 4em;
+}
+
+.grid-container {
+    display: grid;
+    row-gap: 0.4em;
+    column-gap: 0.4em;
+}
+
 sup {
-    display: inline-block;
-    top: 4px;
-    white-space: nowrap;
-    margin: 0;
-    width: auto;
-    vertical-align: baseline;
     position: relative;
-    top: -0.5em;
+    display: inline-block;
+    font-size: 90%;
+    margin: 0;
+    top: -0.4em;
+    width: auto;
     line-height: 0;
+    white-space: nowrap;
+    vertical-align: baseline;
 }
 
 button {
-    font-size: calc(10px + .3vw);
+    font-size: 11px;
     position: relative;
     overflow: hidden;
+    text-overflow: clip;
     color: white;
     background-color: black;
     border: none;
@@ -225,6 +220,10 @@ button:disabled {
     /* box-shadow: none; */
 }
 
+button span {
+    color: white;
+}
+
 span.ripple {
     position: absolute;
     border-radius: 50%;
@@ -233,15 +232,18 @@ span.ripple {
     background-color: rgba(255, 255, 255, 0.3);
 }
 
+@keyframes ripple {
+    to {
+        transform: scale(4);
+        opacity: 0;
+    }
+}
+
 .prestige-div {
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    background-color: #eaeaea;
-    padding: 5px;
-    width: 100%;
-    height: calc(120px + .4vh);
-    border-radius: 10px;
+    align-items: stretch;
+    margin-bottom: 0.4em;
 }
 
 .prestige-div button {
@@ -258,16 +260,9 @@ span.ripple {
     text-align: center;
 }
 
-@keyframes ripple {
-    to {
-        transform: scale(4);
-        opacity: 0;
-    }
-}
-
 .newsticker-bg {
     background-color: black;
-    height: calc(24px + .2vh);
+    height: 24px;
     /* max-width: 390px; */
     overflow: hidden;
     margin-left: auto;
@@ -277,7 +272,7 @@ span.ripple {
 .newsticker-bg * {
     display: inline-block;
     position: absolute;
-    top: 4px;
+    top: 3px;
     white-space: nowrap;
     color: white;
     margin: 0;
@@ -294,7 +289,7 @@ span.ripple {
     transform: translate(-50%, -50%);
     margin: 0.4em 0;
     padding: 10px;
-    background-color: #eaeaea;
+    background-color: #e8e9eb;
     border-radius: 10px;
 }
 
@@ -326,15 +321,22 @@ span.ripple {
 
 .bar-container {
     margin: 0;
-    height: 0.8em;
+    height: 8px;
     border-radius: 10px;
-    background-color: #aaa;
+    background-color: rgb(229, 230, 232);
 }
 
 .bar {
     height: 100%;
     border-radius: 10px;
     background-color: #2692f7;
+    animation-timing-function: ease;
+}
+
+.scrollable {
+    overflow-y: scroll;
+    margin-top: 5px;
+    padding-right: 5px;
 }
 
 @keyframes highlight {
@@ -346,4 +348,44 @@ span.ripple {
         border: 2px solid transparent;
         box-shadow: none;
     }
+}
+
+.achievement {
+    position: fixed;
+    margin: 0;
+    z-index: 10;
+    top: 150%;
+    width: 50%;
+    text-align: center;
+    background-color: white;
+    border: 1px solid #eee;
+    border-radius: 16px;
+    box-shadow: rgba(24, 28, 47, 0.2) 0px 4px 12px 0px;
+}
+
+.achievement-bottom {
+    word-wrap: break-word;
+}
+
+@keyframes achievement-popup {
+    0% { top: 150%; animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1); }
+    15% { top: 75%; }
+    85% { top: 75%; animation-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1); }
+    100% { top: 150%; }
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #ddd;
+    border-radius: 4px;
+}
+  
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px;
 }
