--- a/style.css
+++ b/style.css
@@ -1,535 +1,638 @@
 /* Elements */
 
 * {
-    color: black;
+  color: black;
 }
 
 html {
-    touch-action: manipulation;
+  touch-action: manipulation;
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    touch-action: manipulation;
+  display: flex;
+  justify-content: center;
+  touch-action: manipulation;
 }
 
 p {
-    font-size: 13px;
+  font-size: 13px;
 }
 
 h1 {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 h2 {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 h3 {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 hr {
-    border: 0;
-    border-top: 2px solid #c4c5c7;
+  border: 0;
+  border-top: 2px solid #c4c5c7;
 }
 
 /* Colors */
 
-.white { color: white; }
-.gray { color: #555; }
-.light-gray { color: #ecf0f1; }
-.black { color: black; }
-.pink { color: #de2ac6; }
+.white {
+  color: white;
+}
 
-.blue { color: #2692f7; }
-.dark-blue { color: #0060bb; }
+.gray {
+  color: #555;
+}
 
-.purple { color: #9865ff;}
-.dark-purple { color: #6537c2;}
+.light-gray {
+  color: #ecf0f1;
+}
 
-.pink { color: #d165ff;}
-.dark-pink { color: #9837c2;}
+.black {
+  color: black;
+}
 
-.light-red { color: #ecb2b2; }
-.red { color: #e85050; }
+.pink {
+  color: #de2ac6;
+}
 
-.light-green { color: #99b897; }
-.green { color: #4eb346; }
+.blue {
+  color: #2692f7;
+}
+
+.dark-blue {
+  color: #0060bb;
+}
+
+.purple {
+  color: #9865ff;
+}
+
+.dark-purple {
+  color: #6537c2;
+}
+
+.pink {
+  color: #d165ff;
+}
+
+.dark-pink {
+  color: #9837c2;
+}
+
+.light-red {
+  color: #ecb2b2;
+}
+
+.red {
+  color: #e85050;
+}
+
+.light-green {
+  color: #99b897;
+}
+
+.green {
+  color: #4eb346;
+}
 
 /* Amount */
 
 .fixed {
-    z-index: 100;
-    top: 0;
-    margin: 0;
-    width: 100%;
-    position: fixed;
-    background-color: white;
-    box-shadow: rgba(24, 28, 47, 0.2) 0px 4px 12px 0px;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
+  z-index: 100;
+  top: 0;
+  margin: 0;
+  width: 100%;
+  position: fixed;
+  background-color: white;
+  box-shadow: rgba(24, 28, 47, 0.2) 0px 4px 12px 0px;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .amount {
-    margin: .5em;
-    line-height: 1px;
+  margin: .5em;
+  line-height: 1px;
 }
 
 .amount-div {
-    display: flex;
-    height: 24px;
-    justify-content: center;
+  display: flex;
+  height: 24px;
+  justify-content: center;
 }
 
 .amount-div p {
-    margin: 0;
+  margin: 0;
 }
 
 .amount-div h1 {
-    position: relative;
-    bottom: 0.15em;
+  position: relative;
+  bottom: 0.15em;
 }
 
 /* Main */
 
 .main {
-    background-color: white;
-    transition: 0.3s;
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  background-color: white;
+  transition: 0.3s;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .m0 {
-    margin: 0;
+  margin: 0;
 }
 
 .ma {
-    margin: auto;
+  margin: auto;
 }
 
 .center {
-    text-align: center;
-    justify-content: center;
+  text-align: center;
+  justify-content: center;
 }
 
 .inline {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .space-between {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .space-around {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .flex-start {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .click-slider {
-    display: block;
-    position: absolute;
-    background-color: #2692f7;
-    bottom: 0;
-    height: 5px;
-    width: 100%;
+  display: block;
+  position: absolute;
+  background-color: #2692f7;
+  bottom: 0;
+  height: 5px;
+  width: 100%;
 }
 
 .gray-text {
-    font-size: 11px;
-    color: #555;
-    margin-top: 0.7em;
-    margin-bottom: 0;
+  font-size: 11px;
+  color: #555;
+  margin-top: 0.7em;
+  margin-bottom: 0;
 }
 
 .tab {
-    height: 28px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5px 5px 5px 7px;
-    margin: 0.4em 0;
-    border-radius: 10px;
-    background-color: rgb(229, 230, 232);
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 5px 5px 7px;
+  margin: 0.4em 0;
+  border-radius: 13px;
+  background-color: rgb(229, 230, 232);
 }
 
 .tab-button {
-    height: 100%;
-    width: 30%;
-    bottom: 0;
+  height: 100%;
+  width: 30%;
+  border-radius: 8px;
+  bottom: 0;
 }
 
 .tab-text {
-    font-size: 11px;
-    color: #555;
-    margin-top: -13px;
-    margin-bottom: 0;
+  font-size: 11px;
+  color: #555;
+  margin-top: -13px;
+  margin-bottom: 0;
 }
 
 .upgrade-div {
-    width: 75%;
-    height: 100%;
+  width: 75%;
+  height: 100%;
 }
 
 .upgrade-number {
-    text-align: center;
-    width: 30%;
+  text-align: center;
+  width: 30%;
 }
 
 /* super verbose boilerplate */
-.width-15 { width: 15%; }
-.width-20 { width: 20%; }
-.width-25 { width: 25%; }
-.width-30 { width: 30%; }
-.width-35 { width: 35%; }
-.width-40 { width: 40%; }
-.width-45 { width: 45%; }
-.width-50 { width: 50%; }
-.width-55 { width: 55%; }
+.width-15 {
+  width: 15%;
+}
+
+.width-20 {
+  width: 20%;
+}
+
+.width-25 {
+  width: 25%;
+}
+
+.width-30 {
+  width: 30%;
+}
+
+.width-35 {
+  width: 35%;
+}
+
+.width-40 {
+  width: 40%;
+}
+
+.width-45 {
+  width: 45%;
+}
+
+.width-50 {
+  width: 50%;
+}
+
+.width-55 {
+  width: 55%;
+}
 
 .height-2x {
-    line-height: 4em;
+  line-height: 4em;
 }
 
 .margin-top-13 {
-    margin-top: 13px;
+  margin-top: 13px;
 }
 
 .grid-container {
-    display: grid;
-    row-gap: 0.4em;
-    column-gap: 0.4em;
+  display: grid;
+  row-gap: 0.4em;
+  column-gap: 0.4em;
 }
 
 sup {
-    position: relative;
-    display: inline-block;
-    font-size: 85%;
-    margin: 0;
-    top: -0.5em;
-    width: auto;
-    line-height: 0;
-    white-space: nowrap;
-    vertical-align: baseline;
+  position: relative;
+  display: inline-block;
+  font-size: 85%;
+  margin: 0;
+  top: -0.5em;
+  width: auto;
+  line-height: 0;
+  white-space: nowrap;
+  vertical-align: baseline;
+}
+
+sub {
+  position: relative;
+  display: inline-block;
+  font-size: 85%;
+  margin: 0;
+  top: 0.3em;
+  width: auto;
+  line-height: 0;
+  white-space: nowrap;
+  vertical-align: middle;
 }
 
 button {
-    font-size: 11px;
-    position: relative;
-    overflow: hidden;
-    text-overflow: clip;
-    color: white;
-    background-color: #24282c;
-    border: none;
-    border-radius: 10px;
-    background-position: center;
-    transition: 0.2s;
+  font-size: 11px;
+  position: relative;
+  overflow: hidden;
+  text-overflow: clip;
+  color: white;
+  background-color: #24282c;
+  border: none;
+  border-radius: 10px;
+  background-position: center;
+  transition: 0.2s;
 }
 
 button:disabled {
-    background-color: #808080;
-    /* box-shadow: none; */
+  background-color: #808080;
+  /* box-shadow: none; */
 }
 
 button span {
-    color: white;
+  color: white;
+}
+
+.button {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2.4em;
+  width: 100%;
+}
+
+#imClickButton {
+  padding: 0;
 }
 
 span.ripple {
-    position: absolute;
-    border-radius: 50%;
-    transform: scale(0);
-    animation: ripple 600ms linear;
-    background-color: rgba(255, 255, 255, 0.3);
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  animation: ripple 600ms linear;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 @keyframes ripple {
-    to {
-        transform: scale(4);
-        opacity: 0;
-    }
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
 }
 
 .prestige-div {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    margin-bottom: 0.4em;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  margin-bottom: 0.4em;
 }
 
 .prestige-div button {
-    margin: 0;
+  margin: 0;
 }
 
 .prestige-desc {
-    margin-top: 0.5em;
-    text-align: center;
+  margin-top: 0.5em;
+  text-align: center;
 }
 
 .prestige-rate {
-    margin-bottom: 0.5em;
-    text-align: center;
+  margin-bottom: 0.5em;
+  text-align: center;
 }
 
 .newsticker-bg {
-    background-color: black;
-    height: 24px;
-    /* max-width: 390px; */
-    overflow: hidden;
-    margin-left: auto;
-    margin-right: auto;
+  background-color: black;
+  height: 24px;
+  /* max-width: 390px; */
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .newsticker-bg p {
-    display: inline-block;
-    position: absolute;
-    top: 3px;
-    white-space: nowrap;
-    color: white;
-    margin: 0;
-    width: auto;
+  display: inline-block;
+  position: absolute;
+  top: 3px;
+  white-space: nowrap;
+  color: white;
+  margin: 0;
+  width: auto;
 }
 
 /* clean this */
 .newsticker-bg sup {
-    display: inline-block;
-    top: 4px;
-    white-space: nowrap;
-    color: white;
-    margin: 0;
-    width: auto;
-    vertical-align: baseline;
-    position: relative;
-    top: -0.5em;
-    line-height: 0;
+  vertical-align: baseline;
+  display: inline-block;
+  white-space: nowrap;
+  width: auto;
+  position: relative;
+  top: -0.5em;
+  line-height: 0;
+  color: white;
+  margin: 0;
 }
 
 .away {
-    position: fixed;
-    z-index: 50;
-    top: 50%;
-    left: 50%;
-    width: 75%;
-    max-width: 320px;
-    transform: translate(-50%, -50%);
-    margin: 0.4em 0;
-    padding: 10px;
-    background-color: #e8e9eb;
-    border-radius: 10px;
+  position: fixed;
+  z-index: 50;
+  top: 50%;
+  left: 50%;
+  width: 75%;
+  max-width: 320px;
+  transform: translate(-50%, -50%);
+  margin: 0.4em 0;
+  padding: 10px;
+  background-color: #e8e9eb;
+  border-radius: 10px;
 }
 
 .away h2 {
-    margin: 0;
-    margin-bottom: -.25em;
+  margin: 0;
+  margin-bottom: -.25em;
 }
 
 .away p {
-    line-height: 0.5em;
-    padding-left: 20px;
-}
-
-.button {
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 2.4em;
-    width: 100%;
-}
-
-.im-button {
-    background: linear-gradient(135deg, rgb(46, 155, 206) 0%, rgb(33, 90, 195) 100%);
-}
-
-#imClickButton {
-    padding: 0;
+  line-height: 0.5em;
+  padding-left: 20px;
 }
 
 .toggle {
-    height: 2.4em;
-    width: 3.6em;
-    background-color: #ecb2b2;
+  height: 2.4em;
+  width: 3.6em;
+  background-color: #ecb2b2;
 }
 
 .bar-container {
-    margin: 0;
-    height: 8px;
-    border-radius: 10px;
-    background-color: rgb(229, 230, 232);
+  margin: 0;
+  height: 8px;
+  border-radius: 10px;
+  background-color: rgb(229, 230, 232);
 }
 
-.bar {
-    height: 100%;
-    border-radius: 10px;
-    background-color: #2692f7;
-    animation-timing-function: ease;
+.blue-bar {
+  height: 100%;
+  border-radius: 10px;
+  background-color: #2692f7;
+  animation-timing-function: ease;
+}
+
+.purple-bar {
+  height: 100%;
+  border-radius: 10px;
+  background-color: #9865ff;
+  animation-timing-function: ease;
 }
 
 .scrollable {
-    overflow-y: scroll;
-    margin-top: 5px;
-    padding-right: 5px;
+  overflow-y: scroll;
+  margin-top: 5px;
+  padding-right: 5px;
 }
 
 .fp-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    padding: 5px;
-    overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  padding: 5px;
+  overflow: scroll;
 }
 
 .fp-grid {
-    display: grid;
-    margin: 0 auto;
+  display: grid;
+  margin: 0 auto;
 }
 
 .fp-element {
-    position: relative;
-    overflow: visible;
-    display: inline-grid;
-    margin: 0px 6px 12px 6px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  overflow: visible;
+  display: inline-grid;
+  margin: 0px 6px 12px 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .fp-branch {
-    position: relative;
-    overflow: visible;
-    display: inline-grid;
-    margin: 0px 12px 6px 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  overflow: visible;
+  display: inline-grid;
+  margin: 0px 12px 6px 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.fp-element button, .fp-branch button {
-    width: 100%;
-    height: 2.4em;
-    background-color: #212a85;
+.fp-element button,
+.fp-branch button {
+  width: 100%;
+  height: 2.4em;
+  background-color: #212a85;
 }
 
-.fp-line, .fp-left, .fp-right {
-    position: relative;
-    top: -6px;
-    overflow: visible;
-    display: block;
-    height: 2px;
+.fp-line,
+.fp-left,
+.fp-right {
+  position: relative;
+  top: -6px;
+  overflow: visible;
+  display: block;
+  height: 2px;
 }
 
 .fp-none {
-    position: relative;
-    top: -6px;
-    overflow: visible;
-    display: block;
-    height: 0px;
-    background-color: none;
+  position: relative;
+  top: -6px;
+  overflow: visible;
+  display: block;
+  height: 0px;
+  background-color: none;
 }
 
 .fp-line {
-    background-color: black;
+  background-color: black;
 }
 
 .fp-left {
-    background: linear-gradient(-90deg, rgba(0,0,0,0) 49%, rgba(0,0,0,1) 49%);
+  background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 49%, rgba(0, 0, 0, 1) 49%);
 }
 
 .fp-right {
-    background: linear-gradient(90deg, rgba(0,0,0,0) 49%, rgba(0,0,0,1) 49%);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0) 49%, rgba(0, 0, 0, 1) 49%);
 }
 
 .line-bottom::after {
-    content: '';
-    display: block;
-    position: absolute;
-    overflow-y: visible;
-    left: calc(50% - 1px);
-    bottom: -6px;
-    height: 6px;
-    width: 2px;
-    background-color: black;
+  content: '';
+  display: block;
+  position: absolute;
+  overflow-y: visible;
+  left: calc(50% - 1px);
+  bottom: -6px;
+  height: 6px;
+  width: 2px;
+  background-color: black;
 }
 
 
 @keyframes highlight {
-    50% {
-        border: 2px solid black;
-        box-shadow: inset 0 0 0 2px yellow;
-    }
-    100% {
-        border: 2px solid transparent;
-        box-shadow: none;
-    }
+  50% {
+    border: 2px solid black;
+    box-shadow: inset 0 0 0 2px yellow;
+  }
+
+  100% {
+    border: 2px solid transparent;
+    box-shadow: none;
+  }
 }
 
 .achievement {
-    position: fixed;
-    margin: 0;
-    z-index: 10;
-    top: 150%;
-    width: 180px;
-    text-align: center;
-    background-color: white;
-    border: 1px solid #eee;
-    border-radius: 16px;
-    box-shadow: rgba(24, 28, 47, 0.2) 0px 4px 12px 0px;
+  position: fixed;
+  margin: 0;
+  z-index: 10;
+  top: 150%;
+  width: 180px;
+  text-align: center;
+  background-color: white;
+  border: 1px solid #eee;
+  border-radius: 16px;
+  box-shadow: rgba(24, 28, 47, 0.2) 0px 4px 12px 0px;
 }
 
 .achievement-top h2 {
-    margin: 1em;
-    margin-top: 0.8em;
-    margin-bottom: 0;
+  margin: 1em;
+  margin-top: 0.8em;
+  margin-bottom: 0;
 }
 
 .achievement-bottom p {
-    margin: 1em;
-    margin-top: 0.5em;
-    margin-bottom: 1em;
-    word-wrap: break-word;
+  margin: 1em;
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+  word-wrap: break-word;
 }
 
 @keyframes achievement-popup {
-    0% { top: 150%; animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1); }
-    15% { top: 75%; }
-    85% { top: 75%; animation-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1); }
-    100% { top: 150%; }
+  0% {
+    top: 150%;
+    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
+  }
+
+  15% {
+    top: 75%;
+  }
+
+  85% {
+    top: 75%;
+    animation-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+  }
+
+  100% {
+    top: 150%;
+  }
 }
 
 @keyframes fade-in {
-    0% { display: block; opacity: 0; }
-    100% { opacity: 1; }
+  0% {
+    display: block;
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+  width: 8px;
+  height: 8px;
 }
-  
+
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #ddd;
-    border-radius: 4px;
+  background: #ddd;
+  border-radius: 4px;
 }
-  
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 4px;
+  background: #888;
+  border-radius: 4px;
 }
