--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 * {
   color: black;
-  text-rendering: optimizeLegibility; 
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
 
 html {
@@ -215,8 +216,8 @@ hr {
   padding: 5px 5px 5px 7px;
   margin: 0.4em 0;
   border-radius: 13px;
-  background-color: rgb(241, 243, 244);
-  box-shadow: rgba(24, 28, 47, 0.25) 0 2px 8px 0;
+  background-color: #f8f8f8;
+  box-shadow: rgba(24, 28, 47, 0.22) 0 2px 8px 0;
 }
 
 .tab-button {
@@ -319,6 +320,7 @@ sub {
 }
 
 button {
+  cursor: pointer;
   font-size: 11px;
   position: relative;
   overflow: hidden;
@@ -455,7 +457,7 @@ span.ripple {
   transform: translate(-50%, -50%);
   margin: 0.4em 0;
   padding: 10px;
-  background-color: #e8e9eb;
+  background-color: #e9e9e9;
   border-radius: 10px;
 }
 
@@ -478,7 +480,7 @@ span.ripple {
   margin: 0;
   height: 8px;
   border-radius: 10px;
-  background-color: rgb(229, 230, 232);
+  background-color: #e6e6e6;
 }
 
 .blue-bar {
@@ -539,9 +541,10 @@ span.ripple {
 
 .fp-element button,
 .fp-branch button {
-  width: 100%;
+  width: 2.4em;
   height: 2.4em;
-  background-color: #212a85;
+  background-color: #6537c2;
+  box-shadow: rgba(24, 28, 47, 0.25) 0 2px 8px 0;
 }
 
 .fp-line,
@@ -586,7 +589,6 @@ span.ripple {
   width: 2px;
   background-color: black;
 }
-
 
 @keyframes highlight {
   50% {
@@ -644,6 +646,54 @@ span.ripple {
   100% {
     top: 150%;
   }
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 35px;
+  height: 18px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  border-radius: 10px;
+  transition: .3s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  box-shadow: rgba(24, 28, 47, 0.25) 0 0 8px 0;
+  border-radius: 50%;
+  background-color: white;
+  transition: .3s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(18px);
 }
 
 /*
