--- a/style.css
+++ b/style.css
@@ -209,9 +209,9 @@ hr {
 }
 
 .tab {
-  height: 28px;
+  /*height: 28px;*/
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: space-between;
   padding: 5px 5px 5px 7px;
   margin: 0.4em 0;
@@ -221,10 +221,10 @@ hr {
 }
 
 .tab-button {
-  height: 100%;
+  min-height: 100%;
+  margin: 0;
   width: 30%;
   border-radius: 8px;
-  bottom: 0;
 }
 
 .tab-text {
