--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ hr {
   display: flex;
   align-items: stretch;
   justify-content: space-between;
-  padding: 5px 5px 5px 7px;
+  padding: 5px 5px 5px 8px;
   margin: 0.4em 0;
   border-radius: 13px;
   background-color: #f8f8f8;
@@ -221,8 +221,11 @@ hr {
 }
 
 .tab-button {
-  min-height: 100%;
-  margin: 0;
+  /*
+  height: 30px;
+  margin-top: auto;
+  margin-bottom: auto;
+  */
   width: 30%;
   border-radius: 8px;
 }
@@ -232,6 +235,14 @@ hr {
   color: #555;
   margin-top: -13px;
   margin-bottom: 0;
+  line-height: 1.4em;
+}
+
+.tab-text-margin {
+  font-size: 11px;
+  color: #555;
+  margin-top: -13px;
+  line-height: 1.4em;
 }
 
 .upgrade-div {
@@ -335,6 +346,7 @@ button {
 
 button:disabled {
   background-color: #999;
+  cursor: not-allowed;
   /* box-shadow: none; */
 }
 
